# Clogger-pp

./: CMakeLists.txt  LICENSE  README.md  VERSION
example/: CMakeLists.txt  main.cpp  tui.cpp
include/: CMakeLists.txt
include/Cloggerpp/: Clogger.hpp  Clogger.tpp  Handlers.hpp
include/Cloggerpp/cout/: stdout.hpp
include/Cloggerpp/file/: file.hpp
include/Cloggerpp/tui/: ncurses.hpp
src/: CMakeLists.txt  Clogger.cpp  Handler.cpp  TUI.cpp
src/cout/: stdout.cpp
src/file/: file.cpp
src/tui/: ncurses.cpp
